--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "foundation-sites": "~6.0.3",
+    "foundation-sites": "~6.0.5",
     "slick-carousel": "~1.5.8"
   },
-  "overrides": {}
+  "overrides": {
+    "slick-carousel": [
+      "slick/slick.min.js",
+      "slick/slick.scss",
+      "slick/slick-theme.scss",
+      "slick/fonts*/"
+    ]
+  }
 }
